@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2022 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,9 +14,9 @@ package org.openhab.transform.javascript.internal;
 
 import java.io.File;
 import java.io.FilenameFilter;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -71,47 +71,55 @@ public class JavaScriptTransformationService implements TransformationService, C
     }
 
     /**
-     * Transforms the input <code>source</code> by Java Script. It expects the
+     * Transforms the input <code>source</code> by Java Script. If script is a filename, it expects the
      * transformation rule to be read from a file which is stored under the
      * 'configurations/transform' folder. To organize the various
      * transformations one should use subfolders.
      *
-     * @param filename the name of the file which contains the Java script
+     * @param filenameOrInlineScript parameter can be 1) the name of the file which contains the Java script
      *            transformation rule. Filename can also include additional
      *            variables in URI query variable format which will be injected
-     *            to script engine. Transformation service inject input (source)
-     *            to 'input' variable.
+     *            to script engine. 2) inline script when starting with '|' character.
+     *            Transformation service inject input (source) to 'input' variable.
      * @param source the input to transform
      */
     @Override
-    public @Nullable String transform(String filename, String source) throws TransformationException {
+    public @Nullable String transform(String filenameOrInlineScript, String source) throws TransformationException {
         final long startTime = System.currentTimeMillis();
-        logger.debug("about to transform '{}' by the JavaScript '{}'", source, filename);
+        logger.debug("about to transform '{}' by the JavaScript '{}'", source, filenameOrInlineScript);
 
         Map<String, String> vars = Collections.emptyMap();
-        String fn = filename;
-
-        if (filename.contains("?")) {
-            String[] parts = filename.split("\\?");
-            if (parts.length > 2) {
-                throw new TransformationException("Questionmark should be defined only once in the filename");
-            }
-            fn = parts[0];
-            try {
-                vars = splitQuery(parts[1]);
-            } catch (UnsupportedEncodingException e) {
-                throw new TransformationException("Illegal filename syntax");
-            }
-            if (isReservedWordUsed(vars)) {
-                throw new TransformationException(
-                        "'" + SCRIPT_DATA_WORD + "' word is reserved and can't be used in additional parameters");
-            }
-        }
-
         String result = "";
 
+        CompiledScript cScript;
+
+        if (filenameOrInlineScript.startsWith("|")) {
+            // inline java script
+            cScript = manager.getCompiledScriptByInlineScript(filenameOrInlineScript.substring(1));
+        } else {
+            String filename = filenameOrInlineScript;
+
+            if (filename.contains("?")) {
+                String[] parts = filename.split("\\?");
+                if (parts.length > 2) {
+                    throw new TransformationException("Questionmark should be defined only once in the filename");
+                }
+                filename = parts[0];
+                try {
+                    vars = splitQuery(parts[1]);
+                } catch (IllegalArgumentException e) {
+                    throw new TransformationException("Illegal filename syntax");
+                }
+                if (isReservedWordUsed(vars)) {
+                    throw new TransformationException(
+                            "'" + SCRIPT_DATA_WORD + "' word is reserved and can't be used in additional parameters");
+                }
+            }
+
+            cScript = manager.getCompiledScriptByFilename(filename);
+        }
+
         try {
-            final CompiledScript cScript = manager.getScript(fn);
             final Bindings bindings = cScript.getEngine().createBindings();
             bindings.put(SCRIPT_DATA_WORD, source);
             vars.forEach((k, v) -> bindings.put(k, v));
@@ -134,16 +142,17 @@ public class JavaScriptTransformationService implements TransformationService, C
         return false;
     }
 
-    private Map<String, String> splitQuery(@Nullable String query) throws UnsupportedEncodingException {
+    private Map<String, String> splitQuery(@Nullable String query) throws IllegalArgumentException {
         Map<String, String> result = new LinkedHashMap<>();
         if (query != null) {
             String[] pairs = query.split("&");
             for (String pair : pairs) {
                 String[] keyval = pair.split("=");
                 if (keyval.length != 2) {
-                    throw new UnsupportedEncodingException();
+                    throw new IllegalArgumentException();
                 } else {
-                    result.put(URLDecoder.decode(keyval[0], "UTF-8"), URLDecoder.decode(keyval[1], "UTF-8"));
+                    result.put(URLDecoder.decode(keyval[0], StandardCharsets.UTF_8),
+                            URLDecoder.decode(keyval[1], StandardCharsets.UTF_8));
                 }
             }
         }
